--- a/budget-planner-project/index.html
+++ b/budget-planner-project/index.html
@@ -66,7 +66,8 @@
   db.settings(settings);
 </script> 
 <script src="https://d3js.org/d3.v5.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>  
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
 <script src="/index.js"></script>
 <script src="/graph.js"></script>
 </body>
